# OIA-chatbot-evaluator

./: .gitignore  README.md  config.py  main.py  pyproject.toml
clients/: sheet_client.py
data/: evaluation_input_20250327.json
functions/: io_utils.py  sheet_utils.py  thread_builder.py
